--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Create dummy icon
+      - name: Clean Tauri cache and icons
         run: |
-          mkdir -p src-tauri/icons
-          curl -o src-tauri/icons/icon.png "https://via.placeholder.com/512x512/4A90E2/ffffff?text=App"
-          ls -la src-tauri/icons/icon.png
+          rm -rf src-tauri/icons/
+          rm -rf src-tauri/target/
+          cargo clean || true
         shell: bash
+        
+      - name: Install dependencies
+        run: npm install
         
       - name: Install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-22.04'
